--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,24 @@ ul.topnav li.right {float: right;}
      /*background-image:url("../images/tom_toronto_1.JPG");    */
 }
 
+.certification-banner{
+    text-align: center;
+    font-family: helvetica;
+    background-color: red;
+    font-size: 32px;
+    font-weight:bold;
+    height: 200px;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 1;
+    display: flex;
+    background-size: cover;
+    background-position: center;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+
 .shade_box {
     position: absolute;
     top: 0;
